src/objects/Account_Phone_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Phone Relationships</relationshipLabel>
        <relationshipName>Account_Phone_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Talk_Time_Seconds__c</fullName>
        <label>Inbound Talk Time (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Phone_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Calls__c</fullName>
        <label>Number of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inbound_Calls__c</fullName>
        <label>Number of Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outbound_Calls__c</fullName>
        <label>Number of Outbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Talk_Time_Seconds__c</fullName>
        <label>Outbound Talk Time (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Type__c</fullName>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                    <isActive>false</isActive>
                    <label>Mobile</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Number</label>
        <referenceTo>PhoneNumber__c</referenceTo>
        <relationshipLabel>Account Phone Relationships</relationshipLabel>
        <relationshipName>Account_Phone_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Calling_Time__c</fullName>
        <label>Preferred Calling Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Pop_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screen Pop Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>DCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Talk_Time_Seconds__c</fullName>
        <label>Total Talk Time (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Phone Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phone_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Phone_Number_Type__c</columns>
        <columns>Is_Primary_Phone_del__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APRelationship-{YYYY}{00000}</displayFormat>
        <label>Account Phone Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Phone Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>